【花都】360浏览器字体兼容修复

--- a/src/assets/css/style.styl
+++ b/src/assets/css/style.styl
@@ -1,6 +1,6 @@
 /** 全局的css 必须在这里引入不然打包会忽略 */
 // 不能覆盖icon的font-family
-*:not(.ivu-icon,.iconfont){
+*:not(.ivu-icon){
   // font-family: 'SimSun',"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif !important;
   font-family: simsun, "Times New Roman", Georgia, Serif !important
   word-wrap:break-word
