【武警】体征同步单个药物显示修改

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -428,9 +428,9 @@
 
 .identification-only-one{
   box-sizing:border-box;
-  padding-left: 12px;
-  background:url('../../../../images/left-only.png') no-repeat;
-  right: -3px;
+  // padding-left: 12px;
+  // background:url('../../../../images/left-only.png') no-repeat;
+   right: 0px;
 }
 
 .identification-usage{
