--- a/src/pages/sheet-print/style/print.styl
+++ b/src/pages/sheet-print/style/print.styl
@@ -45,6 +45,9 @@ th[dataname="护士签名"] {
 th[dataname="审核签名"] {
   display none !important
 }
+th[dataname="质控护士"] {
+  display none !important
+}
 .sign-img {
     width 100%
     text-align: center;
