fix:花都医嘱添加下拉模糊匹配

--- a/src/Page/sheet-nursing-order/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-nursing-order/components/sheetTable/components/excel/style.styl
@@ -1,3 +1,10 @@
+.orderContent 
+  /deep/ .el-input__icon 
+    display none
+  /deep/ .el-input__inner
+    border none;
+    background transparent;
+    color #1f3d35 !important
 .sheet-table
   border-collapse collapse
   margin 5px 0px
