--- a/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
@@ -19,7 +19,7 @@
             <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病重'">病重</span>
             <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病危'">病危</span>
           </div>
-          <div class="info" v-if="HOSPITAL_ID == 'beihairenyi'">
+          <div class="info" v-if="HOSPITAL_ID == 'beihairenyi' || HOSPITAL_ID == 'whfk' ">
             {{data.sex}} | {{data.age}} | {{data.inpNo}} | {{data.chargeType
             || '--'}}
           </div>
