【花都】护记归档样式修复

--- a/src/pages/sheet-print/style/print.styl
+++ b/src/pages/sheet-print/style/print.styl
@@ -30,6 +30,9 @@ td[datakey="signerNo"] {
 td[datakey="sign"] {
   display none !important
 }
+td[datakey='sign2'] {
+  display: none !important;
+}
 // td[datakey="auditorNo"] {
 //   display: table-cell !important
 // }
@@ -117,3 +120,4 @@ th[dataname="质控护士"] {
 @page {
   margin 0 10mm
 }
+ 
